--- a/packages/vite-mapps-comp-lib/.storybook/preview-head.html
+++ b/packages/vite-mapps-comp-lib/.storybook/preview-head.html
@@ -1,4 +1,4 @@
 <script>
   window.global = window;
 </script>
-<link rel="stylesheet" href="./../src/styles/index.css">
+<link rel="stylesheet" href="./../dist/style.css">
